--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       name="viewport"
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
     />
-    <meta name="description" content="This is a PWA Starter app" />
+    <meta name="description" content="nesvobodni.cz" />
     <meta name="theme-color" content="#E1477E" />
 
     <!-- These meta tags are Apple-specific, and set the web application to run in full-screen mode with a black status bar. Learn more at https://developer.apple.com/library/archive/documentation/AppleApplications/Reference/SafariHTMLRef/Articles/MetaTags.html-->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="PWA Starter" />
+    <meta name="apple-mobile-web-app-title" content="nesvobodni.cz" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
     <!-- Imports an icon to represent the document. -->
@@ -43,7 +43,7 @@
     <fast-design-system-provider use-defaults>
       <app-index></app-index>
     </fast-design-system-provider>
-
+nesvobodni.cz
     <script type="module" src="/pwabuilder-sw.ts"></script>
 
     <script>
