--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <fast-design-system-provider use-defaults>
       <app-index></app-index>
     </fast-design-system-provider>
-    https://nesvobodni.cz
-    https://instagr.am/nesvobodni 
-    https://twitter.com/nesvobodni_cz
-    https://fb.com/nesvobodni
+    <a href="https://nesvobodni.cz"> web </a>
+    <a href="https://instagr.am/nesvobodni "> ig </a>
+    <a href="https://twitter.com/nesvobodni_cz"> tw </a>
+    <a href="https://fb.com/nesvobodni"> fb </a>
     <script type="module" src="/pwabuilder-sw.ts"></script>
 
     <script>
