--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
     <meta name="apple-mobile-web-app-title" content="nesvobodni.cz" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-    <!-- Imports an icon to represent the document. -->
+    <!-- Imports an icon to represent the document. 
     <link rel="icon" href="assets/icons/icon_24.png" type="image/x-icon" />
-
+    -->
+  
+    <link rel="icon" href="https://avatars.githubusercontent.com/u/92320574?v=4" type="image/x-icon" />
+    
     <!-- Imports the manifest to represent the web application. A web app must have a manifest to be a PWA. -->
     <link rel="manifest" href="manifest.json" />
 
