--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
     word-wrap: break-word;
   }
 </style>
-    <!-- A stylesheet to design the pages. -->
+    <!-- A stylesheet to design the pages. 
     <link href="styles/global.css" rel="stylesheet" />
+    -->
 
     <!--<script type="module" src="/build/src/script/pages/app-index.js"></script>-->
     <script type="module" src="src/script/pages/app-index.ts"></script>
