--- a/index.html
+++ b/index.html
@@ -97,13 +97,17 @@ fast-design-system-provider {
       <app-index></app-index>
     </fast-design-system-provider>
 
-    <h1>Nesvobodni</h1>
-      <div class="content">Test record<br>
-    <a href="https://nesvobodni.cz"> web </a>
-    <a href="https://instagr.am/nesvobodni"> ig </a>
-    <a href="https://twitter.com/nesvobodni_cz"> tw </a>
-    <a href="https://fb.com/nesvobodni"> fb </a>
-        </div>
+    <h1>Nesvobodní</h1>
+    <div class="content">Sociální sítě<br>
+        <a href="https://nesvobodni.cz"> web </a>
+        <a href="https://instagr.am/nesvobodni"> ig </a>
+        <a href="https://twitter.com/nesvobodni_cz"> tw </a>
+        <a href="https://fb.com/nesvobodni"> fb </a>
+    </div>
+    <div class="content">Hashtagy<br>
+        #nesvobodní <a href="https://nesvobodni.cz"> X </a>
+        #nesvobodní <a href="https://nesvobodni.cz"> I </a>
+    </div>
     <script type="module" src="/pwabuilder-sw.ts"></script>
 
     <script>
