--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
   <head>
     <meta charset="utf-8" />
     <title>nesvobodni.cz</title>
-
     <base href="/" />
-
     <!-- This meta viewport ensures the webpage's dimensions change according to the device it's on. This is called Responsive Web Design.-->
     <meta
       name="viewport"
@@ -83,6 +81,9 @@ fast-design-system-provider {
 }
 
 </style>
+    <!-- A stylesheet to use icons  Source: https://www.w3schools.com/icons/fontawesome_icons_brand.asp
+    -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- A stylesheet to design the pages. 
     <link href="styles/global.css" rel="stylesheet" />
     -->
@@ -108,7 +109,7 @@ fast-design-system-provider {
         <a href="https://fb.com/nesvobodni"> fb </a>
     </div>
     <div>
-     <ul class="social-nav">
+     <ul>
             <li><a href="http://blog.nesvobodni.cz/" target="_blank" aria-hidden="true" data-icon="&#x57;"></a></li>
             <li><a href="http://fb.com/nesvobodni" target="_blank" aria-hidden="true" data-icon="&#x46;"></a></li>
             <li><a href="http://twitter.com/nesvobodni_cz" target="_blank" aria-hidden="true" data-icon="&#x54;"></a></li>
@@ -122,7 +123,8 @@ fast-design-system-provider {
       <ul>
             <li><a href="https://blog.nesvobodni.cz/random" target="_blank">https://blog.nesvobodni.cz/random</a></li>
             <li><a href="https://instagr.am/nesvobodni" target="_blank">https://instagr.am/nesvobodni</a></li>
-            <li><a href="https://fb.com/nesvobodni" target="_blank">https://fb.com/nesvobodni</a></li>
+            <li><a href="https://fb.com/nesvobodni" target="_blank">
+              <i class="fa fa-facebook-official"></i>@nesvobodni</a></li>
             <li><a href="https://gab.com/nesvobodni" target="_blank">https://gab.com/nesvobodni</a></li>
             <li><a href="https://twitter.com/nesvobodni_cz" target="_blank">https://twitter.com/nesvobodni_cz</a></li>
             <li><a href="https://parler.com/user/nesvobodni" target="_blank">https://parler.com/user/nesvobodni</a></li>
