--- a/index.html
+++ b/index.html
@@ -102,7 +102,19 @@ fast-design-system-provider {
     <div class="content"><p>Nemusíte s námi souhlasit - ale snad se nad našimi podněty alespoň zamyslíte. A prosíme o sdílení, než nás smažou 😜 😂</p>    </div>
 
 
-    <div class="content">Sociální sítě<br>
+    <div class="content">Sociální sítě<br></div> 
+    <div>
+            <p><a href="https://blog.nesvobodni.cz/random" target="_blank">https://blog.nesvobodni.cz/random</a></p>
+            <p><a href="https://instagr.am/nesvobodni" target="_blank">https://instagr.am/nesvobodni</a></p>
+            <p><a href="https://fb.com/nesvobodni" target="_blank">
+              <i class="fa fa-facebook-official"></i>@nesvobodni</a></p>
+            <p><a href="https://gab.com/nesvobodni" target="_blank">https://gab.com/nesvobodni</a></p>
+            <p><a href="https://twitter.com/nesvobodni_cz" target="_blank">https://twitter.com/nesvobodni_cz</a></p>
+            <p><a href="https://parler.com/user/nesvobodni" target="_blank">https://parler.com/user/nesvobodni</a></p>
+            <p><a href="https://gettr.com/user/nesvobodni" target="_blank">https://gettr.com/user/nesvobodni</a></p>
+            <p><a href="https://mewe.com/i/nesvobodni" target="_blank">https://mewe.com/i/nesvobodni</a></p>
+    </div>
+
         <a href="https://nesvobodni.cz"> web </a>
         <a href="https://instagr.am/nesvobodni"> ig </a>
         <a href="https://twitter.com/nesvobodni_cz"> tw </a>
@@ -116,20 +128,6 @@ fast-design-system-provider {
             <li><a href="http://t.me/nesvobodni" target="_blank" aria-hidden="true" data-icon="&#x47;"></a></li>
             <li><a href="http://t.me/nesvobodni" target="_blank" aria-hidden="true" data-icon="&#x56;"></a></li>
             <li><a href="http://instagr.am/nesvobodni" target="_blank" aria-hidden="true" data-icon="&#x49;"></a></li>        
-     </ul>
-    </div>
-
-     <div>
-      <ul>
-            <li><a href="https://blog.nesvobodni.cz/random" target="_blank">https://blog.nesvobodni.cz/random</a></li>
-            <li><a href="https://instagr.am/nesvobodni" target="_blank">https://instagr.am/nesvobodni</a></li>
-            <li><a href="https://fb.com/nesvobodni" target="_blank">
-              <i class="fa fa-facebook-official"></i>@nesvobodni</a></li>
-            <li><a href="https://gab.com/nesvobodni" target="_blank">https://gab.com/nesvobodni</a></li>
-            <li><a href="https://twitter.com/nesvobodni_cz" target="_blank">https://twitter.com/nesvobodni_cz</a></li>
-            <li><a href="https://parler.com/user/nesvobodni" target="_blank">https://parler.com/user/nesvobodni</a></li>
-            <li><a href="https://gettr.com/user/nesvobodni" target="_blank">https://gettr.com/user/nesvobodni</a></li>
-            <li><a href="https://mewe.com/i/nesvobodni" target="_blank">https://mewe.com/i/nesvobodni</a></li>
      </ul>
     </div>
 
