--- a/index.html
+++ b/index.html
@@ -104,15 +104,15 @@ fast-design-system-provider {
 
     <div class="content">Sociální sítě<br/></div> 
     <div>
-            <a href="https://blog.nesvobodni.cz/random" target="_blank">https://blog.nesvobodni.cz/random</a><br />
-            <a href="https://instagr.am/nesvobodni" target="_blank">https://instagr.am/nesvobodni</a><br />
-            <a href="https://fb.com/nesvobodni" target="_blank">
-              <i class="fa fa-facebook-official"></i>@nesvobodni</a><br />
-            <a href="https://gab.com/nesvobodni" target="_blank">https://gab.com/nesvobodni</a><br />
-            <a href="https://twitter.com/nesvobodni_cz" target="_blank">https://twitter.com/nesvobodni_cz</a><br />
-            <a href="https://parler.com/user/nesvobodni" target="_blank">https://parler.com/user/nesvobodni</a><br />
-            <a href="https://gettr.com/user/nesvobodni" target="_blank">https://gettr.com/user/nesvobodni</a><br />
-            <a href="https://mewe.com/i/nesvobodni" target="_blank">https://mewe.com/i/nesvobodni</a><br />
+            <div><a href="https://blog.nesvobodni.cz/random" target="_blank">https://blog.nesvobodni.cz/random</a></div>
+            <div><a href="https://instagr.am/nesvobodni" target="_blank">https://instagr.am/nesvobodni</a></div>
+            <div><a href="https://fb.com/nesvobodni" target="_blank">
+              <i class="fa fa-facebook-official"></i>@nesvobodni</a></div>
+            <div><a href="https://gab.com/nesvobodni" target="_blank">https://gab.com/nesvobodni</a></div>
+            <div><a href="https://twitter.com/nesvobodni_cz" target="_blank">https://twitter.com/nesvobodni_cz</a></div>
+            <div><a href="https://parler.com/user/nesvobodni" target="_blank">https://parler.com/user/nesvobodni</a></div>
+            <div><a href="https://gettr.com/user/nesvobodni" target="_blank">https://gettr.com/user/nesvobodni</a></div>
+            <div><a href="https://mewe.com/i/nesvobodni" target="_blank">https://mewe.com/i/nesvobodni</a></div>
     </div>
 
         <a href="https://nesvobodni.cz"> web </a>
