--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ fast-design-system-provider {
     <div class="content"><p>Nemusíte s námi souhlasit - ale snad se nad našimi podněty alespoň zamyslíte. A prosíme o sdílení, než nás smažou 😜 😂</p>    </div>
 
 
-    <div class="content">Sociální sítě<br/></div> 
+    <div class="content">Sociální sítě:</div> 
     <div>
             <div><a href="https://blog.nesvobodni.cz/random" target="_blank">https://blog.nesvobodni.cz/random</a></div>
             <div><a href="https://instagr.am/nesvobodni" target="_blank">https://instagr.am/nesvobodni</a></div>
