--- a/index.html
+++ b/index.html
@@ -103,16 +103,15 @@ fast-design-system-provider {
 
 
     <div class="content">Sociální sítě:</div> 
-    <div>
-            <div><a href="https://blog.nesvobodni.cz/random" target="_blank">https://blog.nesvobodni.cz/random</a></div>
-            <div><a href="https://instagr.am/nesvobodni" target="_blank">https://instagr.am/nesvobodni</a></div>
-            <div><a href="https://fb.com/nesvobodni" target="_blank">
-              <i class="fa fa-facebook-official"></i>@nesvobodni</a></div>
-            <div><a href="https://gab.com/nesvobodni" target="_blank">https://gab.com/nesvobodni</a></div>
-            <div><a href="https://twitter.com/nesvobodni_cz" target="_blank">https://twitter.com/nesvobodni_cz</a></div>
-            <div><a href="https://parler.com/user/nesvobodni" target="_blank">https://parler.com/user/nesvobodni</a></div>
-            <div><a href="https://gettr.com/user/nesvobodni" target="_blank">https://gettr.com/user/nesvobodni</a></div>
-            <div><a href="https://mewe.com/i/nesvobodni" target="_blank">https://mewe.com/i/nesvobodni</a></div>
+    <div class="content">
+            <a href="https://blog.nesvobodni.cz/random" target="_blank">https://blog.nesvobodni.cz/random</a>
+            <a href="https://instagr.am/nesvobodni" target="_blank">https://instagr.am/nesvobodni</a>
+            <a href="https://fb.com/nesvobodni" target="_blank"><i class="fa fa-facebook-official"></i>@nesvobodni</a>
+            <a href="https://gab.com/nesvobodni" target="_blank">https://gab.com/nesvobodni</a>
+            <a href="https://twitter.com/nesvobodni_cz" target="_blank">https://twitter.com/nesvobodni_cz</a>
+            <a href="https://parler.com/user/nesvobodni" target="_blank">https://parler.com/user/nesvobodni</a>
+            <a href="https://gettr.com/user/nesvobodni" target="_blank">https://gettr.com/user/nesvobodni</a>
+            <a href="https://mewe.com/i/nesvobodni" target="_blank">https://mewe.com/i/nesvobodni</a>
     </div>
 
         <a href="https://nesvobodni.cz"> web </a>
