--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@ fast-design-system-provider {
 
     <div class="content">Sociální sítě:</div> 
     <div class="content">
-            <a href="https://blog.nesvobodni.cz/random" target="_blank">https://blog.nesvobodni.cz/random</a>
+            <a href="https://blog.nesvobodni.cz/random" target="_blank"><i style="font-size:24px" class="fa">&#xf174;</i> <i class="fa fa-tumblr-square"></i> https://blog.nesvobodni.cz/random</a>
             <a href="https://instagr.am/nesvobodni" target="_blank">https://instagr.am/nesvobodni</a>
-            <a href="https://fb.com/nesvobodni" target="_blank"><i class="fa fa-facebook-official"></i>@nesvobodni</a>
+            <a href="https://fb.com/nesvobodni" target="_blank"><i style="font-size:24px" class="fa">&#xf230;</i> <i class="fa fa-facebook-official"></i>@nesvobodni</a>
             <a href="https://gab.com/nesvobodni" target="_blank">https://gab.com/nesvobodni</a>
             <a href="https://twitter.com/nesvobodni_cz" target="_blank">https://twitter.com/nesvobodni_cz</a>
             <a href="https://parler.com/user/nesvobodni" target="_blank">https://parler.com/user/nesvobodni</a>
