--- a/index.html
+++ b/index.html
@@ -104,38 +104,21 @@ fast-design-system-provider {
 
     <div class="content">Sociální sítě:</div> 
     <div class="content">
-            <a href="https://blog.nesvobodni.cz/random" target="_blank"><i style="font-size:24px" class="fa">&#xf174;</i> <i class="fa fa-tumblr-square"></i> https://blog.nesvobodni.cz/random</a>
-            <a href="https://instagr.am/nesvobodni" target="_blank">https://instagr.am/nesvobodni</a>
-            <a href="https://fb.com/nesvobodni" target="_blank"><i style="font-size:24px" class="fa">&#xf230;</i> <i class="fa fa-facebook-official"></i>@nesvobodni</a>
-            <a href="https://gab.com/nesvobodni" target="_blank">https://gab.com/nesvobodni</a>
-            <a href="https://twitter.com/nesvobodni_cz" target="_blank">https://twitter.com/nesvobodni_cz</a>
-            <a href="https://parler.com/user/nesvobodni" target="_blank">https://parler.com/user/nesvobodni</a>
-            <a href="https://gettr.com/user/nesvobodni" target="_blank">https://gettr.com/user/nesvobodni</a>
-            <a href="https://mewe.com/i/nesvobodni" target="_blank">https://mewe.com/i/nesvobodni</a>
+            <a href="https://blog.nesvobodni.cz/random" target="_blank"> <i class="fa fa-tumblr-square"></i> blog.nesvobodni.cz </a>
+            <a href="https://twitter.com/nesvobodni_cz" target="_blank"> <i class="fa fa-twitter-square"></i> @nesvobodni_cz </a>
+            <a href="https://instagr.am/nesvobodni" target="_blank"> <i class="fa fa-instagram"> @nesvobodni </a>
+            <a href="https://fb.com/nesvobodni" target="_blank"> <i class="fa fa-facebook-official"></i> @nesvobodni </a>
+            <a href="https://gab.com/nesvobodni" target="_blank"> gab.com/nesvobodni </a>
+            <a href="https://parler.com/user/nesvobodni" target="_blank"> parler.com/user/nesvobodni </a>
+            <a href="https://gettr.com/user/nesvobodni" target="_blank"> gettr.com/user/nesvobodni </a>
+            <a href="https://mewe.com/i/nesvobodni" target="_blank"> mewe.com/i/nesvobodni </a>
     </div>
-
-        <a href="https://nesvobodni.cz"> web </a>
-        <a href="https://instagr.am/nesvobodni"> ig </a>
-        <a href="https://twitter.com/nesvobodni_cz"> tw </a>
-        <a href="https://fb.com/nesvobodni"> fb </a>
-    </div>
-    <div>
-     <ul>
-            <li><a href="http://blog.nesvobodni.cz/" target="_blank" aria-hidden="true" data-icon="&#x57;"></a></li>
-            <li><a href="http://fb.com/nesvobodni" target="_blank" aria-hidden="true" data-icon="&#x46;"></a></li>
-            <li><a href="http://twitter.com/nesvobodni_cz" target="_blank" aria-hidden="true" data-icon="&#x54;"></a></li>
-            <li><a href="http://t.me/nesvobodni" target="_blank" aria-hidden="true" data-icon="&#x47;"></a></li>
-            <li><a href="http://t.me/nesvobodni" target="_blank" aria-hidden="true" data-icon="&#x56;"></a></li>
-            <li><a href="http://instagr.am/nesvobodni" target="_blank" aria-hidden="true" data-icon="&#x49;"></a></li>        
-     </ul>
-    </div>
-
-  
-    </div>
+    
     <div class="content">Hashtagy<br>
         #nesvobodní <a href="https://nesvobodni.cz"> X </a>
         #nesvobodní <a href="https://nesvobodni.cz"> I </a>
     </div>
+    
     <script type="module" src="/pwabuilder-sw.ts"></script>
 
     <script>
