--- a/index.html
+++ b/index.html
@@ -100,8 +100,6 @@ fast-design-system-provider {
 
     <h1>Nesvobodní</h1>
     <div class="content"><p>Nemusíte s námi souhlasit - ale snad se nad našimi podněty alespoň zamyslíte. A prosíme o sdílení, než nás smažou 😜 😂</p>    </div>
-
-
     <div class="content">Sociální sítě:</div> 
     <div class="content">
             <a href="https://blog.nesvobodni.cz/random" target="_blank"><i class="fa fa-tumblr-square"></i>blog.nesvobodni.cz</a> | 
@@ -114,9 +112,10 @@ fast-design-system-provider {
             <a href="https://mewe.com/i/nesvobodni" target="_blank">mewe.com/i/nesvobodni</a> 
     </div>
     
-    <div class="content">Hashtagy<br>
-        #nesvobodní <a href="https://nesvobodni.cz"> X </a>
-        #nesvobodní <a href="https://nesvobodni.cz"> I </a>
+    <div class="content">Hashtagy:
+              <div class="content">#nesvobodní <a href="https://nesvobodni.cz">X</a> <a href="https://nesvobodni.cz">FB</a> <a href="https://nesvobodni.cz">IG</a></div> 
+              <div class="content">#nechtenásbýt <a href="https://nesvobodni.cz">X</a> <a href="https://nesvobodni.cz">FB</a> <a href="https://nesvobodni.cz">IG</a></div> 
+              <div class="content">#zastavitstát <a href="https://nesvobodni.cz">X</a> <a href="https://nesvobodni.cz">FB</a> <a href="https://nesvobodni.cz">IG</a></div> 
     </div>
     
     <script type="module" src="/pwabuilder-sw.ts"></script>
