--- a/index.html
+++ b/index.html
@@ -99,18 +99,24 @@ fast-design-system-provider {
     </fast-design-system-provider>
 
     <h1>Nesvobodní</h1>
-    <div class="content"><p>Nemusíte s námi souhlasit - ale snad se nad našimi podněty alespoň zamyslíte. A prosíme o sdílení, než nás smažou 😜 😂</p>    </div>
+    <div class="content"><p>Nemusíte s námi souhlasit - ale snad se nad našimi podněty alespoň zamyslíte. A prosíme o sdílení, než nás smažou 😜 😂</p> </div>
     <div class="content">Sociální sítě:</div> 
     <div class="content">
             <a href="https://blog.nesvobodni.cz/random" target="_blank"><i class="fa fa-tumblr-square"></i>blog.nesvobodni.cz</a> | 
             <a href="https://twitter.com/nesvobodni_cz" target="_blank"><i class="fa fa-twitter-square"></i>@nesvobodni_cz</a> | 
             <a href="https://instagr.am/nesvobodni" target="_blank"><i class="fa fa-instagram"></i>@nesvobodni</a> | 
+            <a href="https://threads.com/@nesvobodni" target="_blank"><i class="fa fa-threads"></i>@nesvobodni</a> | 
             <a href="https://fb.com/nesvobodni" target="_blank"><i class="fa fa-facebook-official"></i>@nesvobodni</a> | 
+            <a href="https://t.me/Nesvobodni" target="_blank"><i class="fa fa-telegram"></i>@nesvobodni</a> | 
+
+      
             <a href="https://gab.com/nesvobodni" target="_blank">gab.com/nesvobodni</a> | 
             <a href="https://parler.com/user/nesvobodni" target="_blank">parler.com/user/nesvobodni</a> | 
             <a href="https://gettr.com/user/nesvobodni" target="_blank">gettr.com/user/nesvobodni</a> | 
             <a href="https://mewe.com/i/nesvobodni" target="_blank">mewe.com/i/nesvobodni</a> 
     </div>
+
+    <div class="content"><p></p></div>
     
     <div class="content">Hashtagy:
               <div class="content">#nesvobodní <a href="https://nesvobodni.cz">X</a> <a href="https://nesvobodni.cz">FB</a> <a href="https://nesvobodni.cz">IG</a></div> 
