--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@ fast-design-system-provider {
             <a href="https://gab.com/nesvobodni" target="_blank">gab.com/nesvobodni</a> | 
             <a href="https://parler.com/user/nesvobodni" target="_blank">parler.com/user/nesvobodni</a> | 
             <a href="https://gettr.com/user/nesvobodni" target="_blank">gettr.com/user/nesvobodni</a> | 
-            <a href="https://mewe.com/i/nesvobodni" target="_blank">mewe.com/i/nesvobodni</a> 
+            <a href="https://mewe.com/i/nesvobodni" target="_blank">mewe.com/i/nesvobodni</a> | 
+            <a href="https://linktr.ee/nesvobodni" target="_blank">linktr.ee/nesvobodni</a> 
     </div>
 
     <div class="content"><p></p></div>
