--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@ fast-design-system-provider {
     <div class="content"><p>Nemusíte s námi souhlasit - ale snad se nad našimi podněty alespoň zamyslíte. A prosíme o sdílení, než nás smažou 😜 😂</p> </div>
     <div class="content">Sociální sítě:</div> 
     <div class="content">
-            <a href="https://blog.nesvobodni.cz/random" target="_blank"><i class="fa fa-tumblr-square"></i>blog.nesvobodni.cz</a> | 
+            <p><a href="https://blog.nesvobodni.cz/random" target="_blank"><i class="fa fa-tumblr-square"></i>blog.nesvobodni.cz</a></p> | 
             <a href="https://twitter.com/nesvobodni_cz" target="_blank"><i class="fa fa-twitter-square"></i>@nesvobodni_cz</a> | 
             <a href="https://instagr.am/nesvobodni" target="_blank"><i class="fa fa-instagram"></i>@nesvobodni</a> | 
-            <a href="https://threads.com/@nesvobodni" target="_blank"><i class="fa fa-threads"></i>@nesvobodni</a> | 
+            <p><a href="https://threads.com/@nesvobodni" target="_blank"><i class="fa fa-threads"></i>@nesvobodni</a></p> | 
             <a href="https://fb.com/nesvobodni" target="_blank"><i class="fa fa-facebook-official"></i>@nesvobodni</a> | 
             <a href="https://t.me/Nesvobodni" target="_blank"><i class="fa fa-telegram"></i>@nesvobodni</a> | 
 
