--- a/index.html
+++ b/index.html
@@ -110,10 +110,14 @@ fast-design-system-provider {
 
             <p> | <a href="https://www.reddit.com/r/nesvobodni" target="_blank">reddit.com/r/nesvobodni</a> | 
             <a href="https://www.tiktok.com/@nesvobodni" target="_blank">tiktok.com/@nesvobodni</a> | 
+            <a href="https://www.youtube.com/@nesvobodni" target="_blank">youtube.com/@nesvobodni</a> | 
+            <a href="https://www.reddit.com/r/nesvobodni" target="_blank">reddit.com/r/nesvobodni</a> | 
+            <a href="https://nesvobodni.blogger.com/" target="_blank">nesvobodni.blogger.com</a> | 
             <a href="https://gab.com/nesvobodni" target="_blank">gab.com/nesvobodni</a> | 
             <a href="https://parler.com/user/nesvobodni" target="_blank">parler.com/user/nesvobodni</a> | 
             <a href="https://gettr.com/user/nesvobodni" target="_blank">gettr.com/user/nesvobodni</a> | 
             <a href="https://mewe.com/i/nesvobodni" target="_blank">mewe.com/i/nesvobodni</a> | 
+            <a href="https://feed.nesvobodni.cz/" target="_blank">feed.nesvobodni.cz</a> | 
             <a href="https://linktr.ee/nesvobodni" target="_blank">linktr.ee/nesvobodni</a> | </p> 
     </div>
     
