--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@ fast-design-system-provider {
 
             <p>|<a href="https://www.reddit.com/r/nesvobodni" target="_blank">reddit.com/r/nesvobodni</a>|<a href="https://www.tiktok.com/@nesvobodni" target="_blank">tiktok.com/@nesvobodni</a>|<a href="https://www.youtube.com/@nesvobodni" target="_blank">youtube.com/@nesvobodni</a>|<a href="https://www.reddit.com/r/nesvobodni" target="_blank">reddit.com/r/nesvobodni</a>|<a href="https://nesvobodni.blogspot.com/" target="_blank">nesvobodni.blogspot.com</a>|<a href="https://gab.com/nesvobodni" target="_blank">gab.com/nesvobodni</a>|<a href="https://parler.com/user/nesvobodni" target="_blank">parler.com/user/nesvobodni</a>|<a href="https://gettr.com/user/nesvobodni" target="_blank">gettr.com/user/nesvobodni</a>|<a href="https://mewe.com/i/nesvobodni" target="_blank">mewe.com/i/nesvobodni</a>|<a href="https://feed.nesvobodni.cz/" target="_blank">feed.nesvobodni.cz</a>|<a href="https://linktr.ee/nesvobodni" target="_blank">linktr.ee/nesvobodni</a>|</p> 
     </div>
+
+    <div>
+      <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Chrome Web Store</title><path d="M0 1.637v19.09c0 .9.736 1.636 1.636 1.636h.131a10.4 10.4 0 0 1-.13-1.636 10.3 10.3 0 0 1 1.667-5.64l4.202 7.276h1.128A3.77 3.77 0 0 1 12 16.958a3.77 3.77 0 0 1 3.366 5.406h1.048a4.7 4.7 0 0 0-1.587-5.406h6.83a10.34 10.34 0 0 1 .577 5.406h.13c.9 0 1.636-.737 1.636-1.637V1.637Zm9.273 2.181h5.454a1.09 1.09 0 1 1 0 2.182H9.273a1.09 1.09 0 1 1 0-2.182M12 10.364a10.36 10.36 0 0 1 9.233 5.652H12a4.71 4.71 0 0 0-4.677 4.149L3.91 14.25A10.34 10.34 0 0 1 12 10.364"/></svg>
+    </div>
+    
     
     <!-- Icons - Linktree / https://www.svgrepo.com/collection/social-media
         <a title="X" data-testid="SocialIcon" target="_blank" rel="noopener noreferrer" href="https://x.com/nesvobodni_cz" aria-label="X" class="[&amp;svg]pointer-events-none z-0 overflow-hidden p-2 transition-transform hover:scale-[107.5%]"><svg fill="currentColor" width="32" height="32" viewBox="0 0 24 24" class="text-profileTitleText"><title>X</title><path d="M17.8048 2.96973H20.8705L14.1394 10.6338L22.0034 21.0304H15.8321L11.0004 14.7125L5.46893 21.0304H2.40328L9.53424 12.8331L2.00342 2.96973H8.32798L12.6932 8.74114L17.8048 2.96973ZM16.7318 19.231H18.4313L7.43494 4.70248H5.60888L16.7318 19.231Z"></path></svg><span class="sr-only">X</span></a>
